@@ -6,7 +6,7 @@ Invalid alignment value: 0 (should be non-zero and a power of 2)
    at 0x........: operator delete(void*, std::align_val_t, std::nothrow_t const&) (vg_replace_malloc.c:...)
    by 0x........: main (duplicate_align_size_errors.cpp:20)
 
-memalign() invalid size value: 0
+Unsafe allocation with size of zero is implementation-defined
    at 0x........: memalign (vg_replace_malloc.c:...)
    by 0x........: main (duplicate_align_size_errors.cpp:33)
 
