@@ -34,7 +34,7 @@ Invalid alignment value: 4097 (should be power of 2)
    at 0x........: memalign (vg_replace_malloc.c:...)
    by 0x........: main (memalign.c:145)
 
-memalign() invalid size value: 0
+Unsafe allocation with size of zero is implementation-defined
    at 0x........: memalign (vg_replace_malloc.c:...)
    by 0x........: main (memalign.c:155)
 
