@@ -1,4 +1,4 @@
-memalign() invalid size value: 0
+Unsafe allocation with size of zero is implementation-defined
    at 0x........: memalign (vg_replace_malloc.c:...)
    by 0x........: main (memalign.c:29)
 
